--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -10,8 +10,8 @@ layout: default
 <style type="text/css">
     header.intro-header{
         background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')
-/*         height: 500px; */
-/*         overflow: hidden; */
+        height: 500px; 
+        overflow: hidden;
     }
     header iframe{
         width: 100%;
