--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -235,11 +235,15 @@ layout: default
 </script>
 <!-- anchor-js, Doc:http://bryanbraun.github.io/anchorjs/ -->
 <script>
-    async("http://cdn.bootcss.com/anchor-js/1.1.1/anchor.min.js",function(){
-        anchors.options = {
-          visible: 'always',
-          placement: 'right',
-          icon: '#'
+//     async("http://cdn.bootcss.com/anchor-js/1.1.1/anchor.min.js",function(){
+//         anchors.options = {
+//           visible: 'always',
+//           placement: 'right',
+	 async("//cdnjs.cloudflare.com/ajax/libs/anchor-js/1.1.1/anchor.min.js",function(){
+          anchors.options = {
+            visible: 'always',
+            placement: 'right',
+            icon: '#'
         };
         anchors.add().remove('.intro-header h1').remove('.subheading').remove('.sidebar-container h5');
     })
