--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,4 +43,9 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
+    <script>
+!(function(c,b,d,a){c[a]||(c[a]={});c[a].config={pid:"djxsre0kh6@d6b8ca168a750ba",imgUrl:"https://arms-retcode.aliyuncs.com/r.png?"};
+with(b)with(body)with(insertBefore(createElement("script"),firstChild))setAttribute("crossorigin","",src=d)
+})(window,document,"https://retcode.alicdn.com/retcode/bl.js","__bl");
+</script>
 </head>
